@@ -1,0 +1,23 @@
+<?php
+/**
+ * Class A sample
+ *
+ * @author   John Smith
+ * @package  TestPackage
+ * 
+ * @annotationToGet "i am class param"
+ * @annotationToGet "i am an another class param"
+ * @foobar 12345 54321 hello world
+ */
+class classA
+{
+    /**
+	 * I am function A!
+	 *
+	 * @annotationToGet "i am a string" word 123
+	 * @annotationToGet
+	 *
+	 * @model table/test/tablename t_tablename
+	 */
+    public function funcA()	{ }
+}
