@@ -1,5 +1,6 @@
 #VERSION 0.9.1#
 
+ - added class Peak_Annotations
  - fixed class name case sensitive problem on certain os with Peak_View_Helper_form, Peak_View_Helper_form_select and
    Peak_View_Helper_form_input
  - fixed some display bugs in Peak_Controller_Internal_Pkdoc
